Made the ARRIVETOALLSTEERING which arrives to all the points in a path, works for all the pathfinding currently in.

--- a/GameAI/pathfinding/game/pathfinding.vcxproj
+++ b/GameAI/pathfinding/game/pathfinding.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="PositionComponent.h" />
     <ClInclude Include="PriorityQueue.h" />
     <ClInclude Include="SeekSteering.h" />
+    <ClInclude Include="ArriveToAllSteering.h" />
     <ClInclude Include="SeparationSteering.h" />
     <ClInclude Include="Steering.h" />
     <ClInclude Include="SteeringComponent.h" />
@@ -186,6 +187,7 @@
     <ClCompile Include="PlayerMoveToMessage.cpp" />
     <ClCompile Include="PositionComponent.cpp" />
     <ClCompile Include="SeekSteering.cpp" />
+    <ClCompile Include="ArriveToAllSteering.cpp" />
     <ClCompile Include="SeparationSteering.cpp" />
     <ClCompile Include="Steering.cpp" />
     <ClCompile Include="SteeringComponent.cpp" />
