added g as flow field message

--- a/GameAI/pathfinding/game/pathfinding.vcxproj
+++ b/GameAI/pathfinding/game/pathfinding.vcxproj
@@ -109,6 +109,7 @@
     <ClInclude Include="FaceSteering.h" />
     <ClInclude Include="FlockingSteering.h" />
     <ClInclude Include="FlockMessage.h" />
+    <ClInclude Include="FlowFieldPathfinder.h" />
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="GameMessage.h" />
     <ClInclude Include="GameMessageManager.h" />
@@ -166,6 +167,7 @@
     <ClCompile Include="FaceSteering.cpp" />
     <ClCompile Include="FlockingSteering.cpp" />
     <ClCompile Include="FlockMessage.cpp" />
+    <ClCompile Include="FlowFieldPathfinder.cpp" />
     <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="GameMessage.cpp" />
     <ClCompile Include="GameMessageManager.cpp" />
