Everything's Working... Kind of
* A star, Dijkstra, DFS seem to work, possible bug on first pathfind.
* Interuptable breaks 90% of the time
* Flow field works, but they jitter at the end.

--- a/GameAI/pathfinding/game/pathfinding.vcxproj
+++ b/GameAI/pathfinding/game/pathfinding.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="Pathfinder.h" />
     <ClInclude Include="PathfindingDebugContent.h" />
     <ClInclude Include="pathfindingMessage.h" />
+    <ClInclude Include="PathfindManager.h" />
     <ClInclude Include="PathToMessage.h" />
     <ClInclude Include="PhysicsComponent.h" />
     <ClInclude Include="PlayerMoveToMessage.h" />
@@ -190,6 +191,7 @@
     <ClCompile Include="Pathfinder.cpp" />
     <ClCompile Include="PathfindingDebugContent.cpp" />
     <ClCompile Include="pathfindingMessagecpp.cpp" />
+    <ClCompile Include="PathfindManager.cpp" />
     <ClCompile Include="PathToMessage.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="PlayerMoveToMessage.cpp" />
