Added a superbehavior called WanderPath which effectively just wanders a pathfinding algorithm. There might be a freeze in the game but I think I patched it all out. There will be some suspect tests incase it wasn't patched.

--- a/GameAI/pathfinding/game/pathfinding.vcxproj
+++ b/GameAI/pathfinding/game/pathfinding.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="Unit.h" />
     <ClInclude Include="UnitManager.h" />
     <ClInclude Include="WanderAndChaseSteering.h" />
+    <ClInclude Include="WanderPath.h" />
     <ClInclude Include="WanderSteering.h" />
   </ItemGroup>
   <ItemGroup>
@@ -200,6 +201,7 @@
     <ClCompile Include="Unit.cpp" />
     <ClCompile Include="UnitManager.cpp" />
     <ClCompile Include="WanderAndChaseSteering.cpp" />
+    <ClCompile Include="WanderPath.cpp" />
     <ClCompile Include="WanderSteering.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
