--- a/GameAI/pathfinding/game/pathfinding.vcxproj.filters
+++ b/GameAI/pathfinding/game/pathfinding.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClInclude Include="PathfindManager.h">
       <Filter>Header Files\pathfinding</Filter>
     </ClInclude>
+    <ClInclude Include="Spawner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\Game.cpp">
@@ -406,6 +409,9 @@
     </ClCompile>
     <ClCompile Include="PathfindManager.cpp">
       <Filter>Source Files\pathfinding</Filter>
+    </ClCompile>
+    <ClCompile Include="Spawner.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
