--- a/GameAI/pathfinding/game/pathfinding.vcxproj
+++ b/GameAI/pathfinding/game/pathfinding.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="AStarInteruptable.h" />
     <ClInclude Include="AStarPathfinder.h" />
     <ClInclude Include="CohesionSteering.h" />
+    <ClInclude Include="CollisionMessage.h" />
     <ClInclude Include="Compare.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentManager.h" />
@@ -161,6 +162,7 @@
     <ClCompile Include="AStarInteruptable.cpp" />
     <ClCompile Include="AStarPathfinder.cpp" />
     <ClCompile Include="CohesionSteering.cpp" />
+    <ClCompile Include="CollisionMessage.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="ComponentManager.cpp" />
     <ClCompile Include="Connection.cpp" />
